# modern_durak_game

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  ProjectOptions.cmake  compile_commands.json  conanfile.py  conanfile.txt  create_combination_database.cxx  main.cxx
.github/workflows/: docker-image.yml
cmake/: Sanitizers.cmake
database/: combination.db
example_of_a_game_server/: CMakeLists.txt  database.cxx  database.hxx  serialization.hxx  util.cxx  util.hxx
example_of_a_game_server/game/: CMakeLists.txt
example_of_a_game_server/game/logic/: CMakeLists.txt  allowedMoves.hxx  game.cxx  game.hxx
example_of_a_game_server/server/: CMakeLists.txt  gameToCreate.cxx  gameToCreate.hxx  myWebsocket.hxx  server.cxx  server.hxx
example_of_a_game_server/util/: util.cxx  util.hxx
modern_durak_game/: CMakeLists.txt
modern_durak_game/game/logic/: CMakeLists.txt  game.cxx  game.hxx  gameAllowedTypes.hxx
modern_durak_game/server/: CMakeLists.txt  gameToCreate.cxx  gameToCreate.hxx  server.cxx  server.hxx  user.hxx
modern_durak_game/util/: CMakeLists.txt  util.cxx  util.hxx
src/: CMakeLists.txt  database.cxx  database.hxx  serialization.hxx  util.cxx  util.hxx
src/game/: CMakeLists.txt  gameUser.hxx
src/game/logic/: CMakeLists.txt  allowedMoves.hxx  durakStateMachine.hxx  durakStateMachineState.hxx  game.cxx  game.hxx  gameEvent.hxx  gameMachine.hxx
src/logic/: logic.cxx
src/server/: CMakeLists.txt  gameToCreate.cxx  gameToCreate.hxx  myWebsocket.hxx  server.cxx  server.hxx  user.hxx
test/: CMakeLists.txt  constant.hxx  game.cxx  mockserver.hxx  test.cxx  test_config.cxx
